--- a/index.html
+++ b/index.html
@@ -1065,8 +1065,8 @@
     <footer class="footer">
         <div class="container p-3">
             <div class="text-center center-block">
-                <div class="text-muted mb-2">&copy; 2021 &#183; Made by Göktuğ Aşcı with <i
-                        class="text-danger fas fa-heart"></i></div>
+                <div class="text-muted mb-2">&copy; 2021 &#183; Made with <i
+                        class="text-danger fas fa-heart"></i> by Göktuğ Aşcı</div>
                 <a class="" href="mailto:drgoktugasci@gmail.com"><i
                         class="fas fa-2x fa-envelope social"></i></a>&nbsp;&nbsp;&nbsp;
                 <a class="" href="https://www.linkedin.com/in/gokasci/" target="_blank"><i
