added Java cert

--- a/index.html
+++ b/index.html
@@ -447,7 +447,8 @@
                             <li>Keras</li>
                             <li>MLflow</li>
                             <li>Tableau</li>
-                            <li>Apache Spark (PySpark)</li>
+                            <li>Apache Spark</li>
+                            <li>Java</li>
                             <li>Apache Hadoop</li>
                             <li>Apache HBase</li>
                             <li>R</li>
@@ -832,6 +833,12 @@
 
                 <h6 class="mt-3">Other Courses</h6>
                 <ul class="fa-ul mb-0">
+                    <li>
+                        <a href="https://www.sololearn.com/certificates/course/en/1874014/1068/landscape/png" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> SoloLearn &#183;
+                            Java&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
                     <li>
                         <a href="https://www.udemy.com/certificate/UC-dbcd5515-862b-4c9d-9cd2-4402b0e1f172/"
                             target="_blank" class="text-danger">
