--- a/index.html
+++ b/index.html
@@ -1114,7 +1114,7 @@
             }
         });
 
-        $(".navbar-toggler").click(function () {
+        $(".navbar-toggler, .nav-link").click(function () {
             $("#bars-icon, #times-icon").toggleClass("d-none");
         });
 
