--- a/siir.html
+++ b/siir.html
@@ -61,6 +61,13 @@
             color: black;
         }
         /* Medium devices (tablets, 768px and up) The navbar toggle appears at this breakpoint */
+
+        @media (max-width: 992px) {
+            .navbar {
+                padding-top: 2px !important;
+                padding-bottom: 2px !important;
+            }
+        }
         
         @media (min-width: 768px) {
             .card-columns {
