--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                         <h4 class="mb-0">TEV İNANÇ HIGH SCHOOL</h4>
                         <div class="subheading mb-3">
                             <a href="https://tevitol.k12.tr/" target="_blank" class="text-danger">A
-                                Privately Funded High School for Gifted Students&nbsp;<i class="fas fa-link"></i>
+                                High School for Gifted Students in Turkey&nbsp;<i class="fas fa-link"></i>
                             </a>
                         </div>
                         <div>
