--- a/siir.html
+++ b/siir.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta property="og:title" content="Göktuğ Aşcı, MD" />
-    <meta property="og:description" content="I am a medical doctor and a data scientist who builds full-stack cross-platform mobile
-            applications. My passion is to bridge the gap between software
-            engineering and medicine; to develop data-driven, inexpensive and
-            simple, yet broadly applicable solutions to improve health care
-            quality around the world." />
+    <meta property="og:title" content="Göktuğ Aşcı, MD, MSc" />
+    <meta property="og:description" content="I am a medical doctor and a data engineer who builds full-stack cross-platform mobile
+                applications. My passion is to bridge the gap between software
+                engineering and medicine; to generate data-driven, inexpensive and
+                simple, yet broadly applicable solutions to improve health care
+                quality around the world." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="assets/img/profile.png" />
     <meta property="og:url" content="https://www.drgoktugasci.com/" />
