update school name

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <h3 class="mb-5"><u>Education</u></h3>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h4 class="mb-0">IE SCHOOL OF HUMAN SCIENCES AND TECHNOLOGY</h4>
+                        <h4 class="mb-0">IE BUSINESS SCHOOL</h4>
                         <div class="subheading mb-3">
                             <a href="https://www.ie.edu/school-human-sciences-technology/masters/master-business-analytics-big-data/"
                                 target="_blank" class="text-danger">Master’s in Business Analytics and
