--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         <div>
                             <ul>
                                 <li>IE - TEV Joint Scholarship (100% of the fee + life expenses)</li>
-                                <li>GPA: 3.72/4</li>
+                                <li>GPA: 3.72/4 &#183; <a href="assets/pdf/ie_transcript.pdf" target="_blank" class="text-danger">Transcript&nbsp;<i class="fas fa-link"></i></a></li>
                             </ul>
                         </div>
                     </div>
