extra links added

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         </div>
                         <div>
                             <ul>
-                                <li>IE - TEV Joint Scholarship (100% of the fee + life expenses)</li>
+                                <li><a class="text-danger" href="https://www.tev.org.tr/burs-yurt-disi-burs-basvurulari-ie-business-school-ispanya-burslari/tr/31" target="_blank">IE - TEV Joint Scholarship (100% of the fee + life expenses)&nbsp;<i class="fas fa-link"></i></a></li>
                                 <li>GPA: 3.72/4 &#183; <a href="assets/pdf/ie_transcript.pdf" target="_blank" class="text-danger">Transcript&nbsp;<i class="fas fa-link"></i></a></li>
                             </ul>
                         </div>
@@ -199,8 +199,8 @@
                         <div>
                             <ul>
                                 <li>
-                                    Outstanding Success Award for Higher Education, TEV (2015, 2016, 2017, 2018, 2019,
-                                    2020)
+                                    <a class="text-danger" href="https://www.tev.org.tr/burs/tr/12/Yurt-ici-Burslar-Ek-Bilgiler" target="_blank">Outstanding Success Award for Higher Education, TEV (2015, 2016, 2017, 2018, 2019,
+                                    2020)&nbsp;<i class="fas fa-link"></i></a>
                                 </li>
                             </ul>
                         </div>
@@ -236,7 +236,7 @@
                         <h4 class="mb-0">TEV İNANÇ HIGH SCHOOL</h4>
                         <div class="subheading mb-3">
                             <a href="https://tevitol.k12.tr/" target="_blank" class="text-danger">A
-                                High School for Gifted Students in Turkey&nbsp;<i class="fas fa-link"></i>
+                            Privately Funded High School for Gifted Students&nbsp;<i class="fas fa-link"></i>
                             </a>
                         </div>
                         <div>
