--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
         .my-float {
             margin-top: 16px;
         }
+
+        .light-background {
+            background-color: #fafeff;
+        }
     </style>
 </head>
 
@@ -164,7 +168,7 @@
         </section>
         <hr class="m-0" />
         <!-- Education-->
-        <section class="resume-section" id="education">
+        <section class="resume-section light-background" id="education">
             <div class="resume-section-content">
                 <h3 class="mb-5"><u>Education</u></h3>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -404,7 +408,7 @@
         </section>
         <hr class="m-0" />
         <!-- Skills-->
-        <section class="resume-section" id="languages">
+        <section class="resume-section light-background" id="languages">
             <div class="resume-section-content">
                 <h3 class="mb-5"><u>Languages</u></h3>
                 <div class="row">
@@ -456,6 +460,7 @@
                             <li>Tableau</li>
                             <li>Apache Spark</li>
                             <li>Java</li>
+                            <li>Scala</li>
                             <li>Apache Hadoop</li>
                             <li>Apache HBase</li>
                             <li>R</li>
@@ -515,7 +520,7 @@
         </section>
         <hr class="m-0" />
         <!-- Portfolio-->
-        <section class="resume-section" id="portfolio">
+        <section class="resume-section light-background" id="portfolio">
             <div class="resume-section-content">
                 <h3 class="mb-5"><u>Projects</u> <i class="fas fa-code text-warning"></i> & <u>Publications</u> <i
                         class="fas fa-book text-warning"></i></h3>
@@ -1054,7 +1059,7 @@
         </section>
         <hr class="m-0" />
         <!-- Interests-->
-        <section class="resume-section" id="interests">
+        <section class="resume-section light-background" id="interests">
             <div class="resume-section-content">
                 <h3 class="mb-5"><u>Interests</u></h3>
                 <p>
