--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <i id="bars-icon" class="fas fa-bars"></i>
             <i id="times-icon" class="fas fa-times d-none"></i>
         </button>
-        <div class="collapse navbar-collapse" style="transition: 0.1s;" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" style="transition: 0.05s;" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#about">About</a>
@@ -1102,67 +1102,7 @@
     <!-- Third party plugin JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <!-- Added scripts -->
-    <!-- <script src="js/scripts.js"></script> -->
-    <script>
-        $(window).scroll(function () {
-            // console.log($(this).scrollTop())
-            if ($(this).scrollTop() < 100) {
-                $(".floating-button-top").removeClass("d-none");
-            } else {
-                $(".floating-button-top").addClass("d-none");
-            }
-
-            if ($(window).scrollTop() + $(window).height() > $(document).height() - 1500) {
-                $(".floating-button-bottom").removeClass("d-none");
-            } else {
-                $(".floating-button-bottom").addClass("d-none");
-            }
-        });
-
-        $(".navbar-toggler, .nav-link").click(function () {
-            $("#bars-icon, #times-icon").toggleClass("d-none");
-        });
-
-        // Smooth scrolling using jQuery easing
-        $('a.js-scroll-trigger[href*="#"]:not([href="#"]), .floating-button').click(function () {
-            if (
-                location.pathname.replace(/^\//, "") ==
-                this.pathname.replace(/^\//, "") &&
-                location.hostname == this.hostname
-            ) {
-                var target = $(this.hash);
-                target = target.length
-                    ? target
-                    : $("[name=" + this.hash.slice(1) + "]");
-                if (target.length) {
-                    $("html, body").animate(
-                        {
-                            scrollTop: target.offset().top,
-                        },
-                        750,
-                        "easeInOutExpo"
-                    );
-                    return false;
-                }
-            }
-        });
-
-        // Closes responsive menu when a scroll trigger link is clicked
-        $(".js-scroll-trigger").click(function () {
-            $(".navbar-collapse").collapse("hide");
-        });
-
-        // Activate scrollspy to add active class to navbar items on scroll
-        $("body").scrollspy({
-            target: "#sideNav",
-        });
-
-        $(".floating-button-bottom").click(function () {
-            $(window).scrollTop(0);
-        });
-
-
-    </script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
