--- a/siir.html
+++ b/siir.html
@@ -99,10 +99,12 @@
             <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2"
                     src="assets/img/profile.png" alt="" /></span>
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <i id="bars-icon" class="fas fa-bars"></i>
+            <i id="times-icon" class="fas fa-times d-none"></i>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" style="transition: 0.05s;" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a style="text-transform: capitalize !important" class="nav-link js-scroll-trigger" href="index.html" target="_blank">Öz Geçmişimi İncele</a>
