--- a/index.html
+++ b/index.html
@@ -846,6 +846,13 @@
                 <h6 class="mt-3">Other Courses</h6>
                 <ul class="fa-ul mb-0">
                     <li>
+                        <a href="https://www.sololearn.com/certificates/course/en/1874014/1159/landscape/png" target="_blank"
+                            class="text-danger">
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> SoloLearn &#183;
+                            Python Data Structures&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li>
                         <a href="https://www.sololearn.com/certificates/course/en/1874014/1068/landscape/png"
                             target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> SoloLearn &#183;
