--- a/index.html
+++ b/index.html
@@ -456,11 +456,11 @@
                             <li>Seaborn</li>
                             <li>Scikit-learn</li>
                             <li>Keras</li>
-                            <li>MLflow</li>
                             <li>Tableau</li>
+                            <li>Apache Airflow</li>
                             <li>Apache Spark</li>
-                            <li>Java</li>
                             <li>Scala</li>
+                            <li>MLflow</li>
                             <li>Apache Hadoop</li>
                             <li>Apache HBase</li>
                             <li>R</li>
@@ -469,15 +469,16 @@
                         <h6>Back-End Development & DevOps</h6>
                         <ul>
                             <li>Python</li>
-                            <li>Django</li>
-                            <li>Django Rest Framework</li>
-                            <li>Flask</li>
-                            <li>AWS S3, RDS, EC2</li>
-                            <li>Heroku</li>
                             <li>SQL</li>
-                            <li>MongoDB</li>
+                            <li>Bash</li>
+                            <li>Django</li>
+                            <li>Flask</li>
+                            <li>AWS S3, RDS, EC2, Lambda</li>
                             <li>Docker</li>
                             <li>Kubernetes</li>
+                            <li>Django Rest Framework</li>
+                            <li>Heroku</li>
+                            <li>MongoDB</li>
                         </ul>
 
                         <h6>Front-End Development</h6>
