--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                         <ul>
                             <li>Python</li>
                             <li>SQL</li>
-                            <li>Bash</li>
+                            <li>Bash Scripting</li>
                             <li>Django</li>
                             <li>Flask</li>
                             <li>AWS S3, RDS, EC2, Lambda</li>
