--- a/siir.html
+++ b/siir.html
@@ -132,7 +132,7 @@
                     <p class="card-text">
                         Güvercinler bulutlara koşarken<br>
                         Kar tanelerini okşuyor papatyalar.<br><br>
-                        Sen güneşsiz de parlarken bembeyaz<br>
+                        Sen güneşsiz bile parlarken bembeyaz<br>
                         Kış gibi görünüyorsun ama her yerin yaz.<br>
                     </p>
                     <p class="card-text text-right">2021</p>
