remove poem years

--- a/siir.html
+++ b/siir.html
@@ -136,7 +136,7 @@
                     <p class="card-text">
                         bir şey diyecektim,<br> iki şey söyledim.<br> bir, iki daha üç oldu<br> anlatması güç oldu.<br>
                     </p>
-                    <p class="card-text text-right">2020</p>
+                    <!-- <p class="card-text text-right">2020</p> -->
                 </div>
             </div>
 
@@ -150,7 +150,7 @@
                         <br> rüzgârın oyununa kandım,<br> sahilde çukurlar kazdım.<br>
                         <br> bütün bulutları yaktım,<br> yağmurun gözlerine baktım.<br>
                     </p>
-                    <p class="card-text text-right">2018</p>
+                    <!-- <p class="card-text text-right">2018</p> -->
                 </div>
             </div>
 
@@ -163,7 +163,7 @@
                         Sanrısı arasında tanrının<br>
                         Bir benden iki bedenden<br>
                     </p>
-                    <p class="card-text text-right">2018</p>
+                    <!-- <p class="card-text text-right">2018</p> -->
                 </div>
             </div>
 
@@ -174,7 +174,7 @@
                         kötü biri değildi, kızmazdı <br> ama ne akıl verirdi, ne de iyi biri'ydi <br> zarar vermez,
                         görmez ya da dinlemezdi <br> çünkü varlığı ile yokluğu bir'di <br>
                     </p>
-                    <p class="card-text text-right">2021</p>
+                    <!-- <p class="card-text text-right">2021</p> -->
                 </div>
             </div>
 
@@ -191,7 +191,7 @@
                         <br> Zamansız bir sonbaharla<br> sararan tenimde<br> kanayan bir kağıt kesiği<br>
 
                     </p>
-                    <p class="card-text text-right">2013</p>
+                    <!-- <p class="card-text text-right">2013</p> -->
                 </div>
             </div>
 
@@ -206,7 +206,7 @@
                         <br> silik bir noktaya dokundu.<br>
 
                     </p>
-                    <p class="card-text text-right">2012</p>
+                    <!-- <p class="card-text text-right">2012</p> -->
                 </div>
             </div>
 
@@ -223,7 +223,7 @@
                         sevmiş
                         <br> ve bir zamanlar sevilmişler<br>
                     </p>
-                    <p class="card-text text-right">2021</p>
+                    <!-- <p class="card-text text-right">2021</p> -->
                 </div>
             </div>
 
@@ -236,7 +236,7 @@
                         boyunu aştı.<br>
 
                     </p>
-                    <p class="card-text text-right">2015</p>
+                    <!-- <p class="card-text text-right">2015</p> -->
                 </div>
             </div>
 
@@ -261,7 +261,7 @@
                         <br> karmaşık kelime.<br>
 
                     </p>
-                    <p class="card-text text-right">2012</p>
+                    <!-- <p class="card-text text-right">2012</p> -->
                 </div>
             </div>
 
@@ -274,7 +274,7 @@
                         Sen güneşsiz bile parlarken bembeyaz<br>
                         Kış gibi görünüyorsun ama her yerin yaz.<br>
                     </p>
-                    <p class="card-text text-right">2021</p>
+                    <!-- <p class="card-text text-right">2021</p> -->
                 </div>
             </div>
 
@@ -289,7 +289,7 @@
                         <br> kızamıyorum anlasana<br> kurmacasın çünkü<br> sana kızmak<br> kendime kızmak olur<br>
 
                     </p>
-                    <p class="card-text text-right">2012</p>
+                    <!-- <p class="card-text text-right">2012</p> -->
                 </div>
             </div>
 
@@ -305,7 +305,7 @@
                         diye<br> içimi döktüm klozete.<br>
 
                     </p>
-                    <p class="card-text text-right">2015</p>
+                    <!-- <p class="card-text text-right">2015</p> -->
                 </div>
             </div>
 
@@ -322,7 +322,7 @@
                         <br> ölüyorum
                         <br>
                     </p>
-                    <p class="card-text text-right">2016</p>
+                    <!-- <p class="card-text text-right">2016</p> -->
                 </div>
             </div>
 
@@ -335,7 +335,7 @@
                         seçenekler birer birer.<br>
 
                     </p>
-                    <p class="card-text text-right">2014</p>
+                    <!-- <p class="card-text text-right">2014</p> -->
                 </div>
             </div>
 
@@ -348,7 +348,7 @@
                         gelecekler birer birer.<br>
 
                     </p>
-                    <p class="card-text text-right">2014</p>
+                    <!-- <p class="card-text text-right">2014</p> -->
                 </div>
             </div>
 
