--- a/siir.html
+++ b/siir.html
@@ -249,7 +249,7 @@
                         <br> dinledikçe alevlenirse gözlerim,<br> umursama,
                         <br> sen söyle bir kez,<br> bir kez daha<br>
                     </p>
-                    <p class="card-text text-right">2019</p>
+                    <!-- <p class="card-text text-right">2019</p> -->
                 </div>
             </div>
 
