--- a/siir.html
+++ b/siir.html
@@ -369,13 +369,13 @@
     <footer class="footer">
         <div class="container p-3">
             <div class="text-center center-block">
-                <div class="text-muted mb-2">&copy; 2021 &#183; Göktuğ Aşcı, MD</div>
+                <div class="text-muted mb-2">&copy; 2021 &#183; Made with <i class="text-danger fas fa-heart"></i> by
+                    Göktuğ Aşcı</div>
                 <a class="" href="mailto:drgoktugasci@gmail.com"><i
                         class="fas fa-2x fa-envelope social"></i></a>&nbsp;&nbsp;&nbsp;
                 <a class="" href="https://www.linkedin.com/in/gokasci/" target="_blank"><i
                         class="fab fa-2x fa-linkedin-in social"></i></a>&nbsp;&nbsp;&nbsp;
-                <a class="" href="https://github.com/gasci" target="_blank"><i
-                        class="fab fa-2x fa-github social"></i></a>
+                <a class="" href="https://github.com/gasci" target="_blank"><i class="fab fa-2x fa-github social"></i></a>
             </div>
         </div>
     </footer>
