--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                         </div>
                         <div>
                             <ul>
-                                <li>Full Scholarship | Language of education: English</li>
+                                <li>Full Scholarship | Language of Education: English</li>
                             </ul>
                         </div>
                     </div>
@@ -314,7 +314,7 @@
                     </div>
                     <div class="flex-shrink-0 text-right">
                         <span class="text-primary font-weight-bold">Istanbul, Turkey</span><br />
-                        <span class="text-primary">June 2020 - August 2021</span>
+                        <span class="text-primary">June 2020 - September 2021</span>
                     </div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
