--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h4 class="mb-0">Business Analyst Intern</h4>
+                        <h4 class="mb-0">Investment Analyst Intern</h4>
                         <div class="subheading mb-3">
                             <a href="https://www.vincivc.com/" target="_blank" class="text-danger">Vinci
                                 Venture Capital&nbsp;<i class="fas fa-link"></i></a>
