--- a/index.html
+++ b/index.html
@@ -464,7 +464,6 @@
                             <li>Apache Airflow</li>
                             <li>Apache Spark</li>
                             <li>Scala</li>
-                            <li>MLflow</li>
                             <li>Apache Hadoop</li>
                             <li>Apache HBase</li>
                             <li>R</li>
@@ -507,6 +506,7 @@
                         <ul>
                             <li>Scrum</li>
                             <li>Git</li>
+                            <li>Atlassian JIRA/Confluence</li>
                             <li>Google Firebase Analytics</li>
                             <li>Google Firebase Cloud Messaging</li>
                             <li>Google Ads/Admob/Adsense</li>
