--- a/index.html
+++ b/index.html
@@ -890,7 +890,7 @@
                         <a href="https://www.sololearn.com/Certificate/1073-1874014/jpg/" target="_blank"
                             class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> SoloLearn &#183;
-                            Python 3 Fundementals&nbsp;
+                            Python 3 Core&nbsp;
                             <i class="fas fa-link"></i>
                         </a>
                     </li>
