--- a/index.html
+++ b/index.html
@@ -879,10 +879,17 @@
                         </a>
                     </li>
                     <li>
+                        <a href="https://www.sololearn.com/Certificate/1060-1874014/jpg/" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> SoloLearn &#183;
+                            SQL&nbsp;
+                            <i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li>
                         <a href="https://www.sololearn.com/Certificate/1024-1874014/jpg/" target="_blank"
                             class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> SoloLearn &#183;
-                            JavaScript Tutorial&nbsp;
+                            JavaScript&nbsp;
                             <i class="fas fa-link"></i>
                         </a>
                     </li>
