--- a/index.html
+++ b/index.html
@@ -281,12 +281,12 @@
                             <a href="http://sellerx.com/" target="_blank" class="text-danger">SellerX:
                                 We Buy and Grow Amazon Businesses&nbsp;<i class="fas fa-link"></i></a>
                         </div>
-                        <!-- <ul>
+                        <ul>
                             <li>
-                                Preprocessed and analyzed 10000+ users’ anonymized health data (Pandas, Scikit-learn) to improve
-                                platform features and marketing performance
+                                Created and maintained e-commerce data pipelines and dashboards using data build tool, Snowflake, Airflow, Python, AWS,
+                                and Tableau.
                             </li>
-                        </ul> -->
+                        </ul>
                     </div>
                     <div class="flex-shrink-0 text-right">
                         <span class="text-primary font-weight-bold">Berlin, Germany</span><br />
