--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <span class="text-danger"> MSc</span>
                 </div>
                 <p class="lead mb-5">
-                    I am <strong>a medical doctor</strong> and <strong>a data engineer</strong> who develops
+                    I am <strong>a data engineer</strong> and <strong>a medical doctor</strong> who develops
                     <strong>full-stack, cross-platform software</strong>. My passion is to bridge the gap between
                     software engineering and medicine to generate <strong>data-driven and inexpensive solutions to
                         automate and improve healthcare services by utilizing big data and machine learning
@@ -283,8 +283,8 @@
                         </div>
                         <ul>
                             <li>
-                                Created and maintained e-commerce data pipelines and dashboards using data build tool, Snowflake, Airflow, Python, AWS,
-                                and Tableau.
+                                Created and maintained 25 Amazon brands’ e-commerce data pipelines and dashboards using data build tool, Snowflake,
+                                Airflow, Python, AWS, and Tableau.
                             </li>
                         </ul>
                     </div>
