--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                         <ul>
                             <li>
                                 Created and maintained 25 Amazon brands’ e-commerce data pipelines and dashboards using data build tool, Snowflake,
-                                Airflow, Python, AWS, and Tableau.
+                                Airflow, Python, AWS, and Tableau
                             </li>
                         </ul>
                     </div>
@@ -315,7 +315,7 @@
                             </li>
                             <li>
                                 Led a team of 6 nutritionists generating 200+ special recipes and completing 150+ online
-                                nutrition consultancy meetings, enabling 15000+ users to develop healthy eating habits.
+                                nutrition consultancy meetings, enabling 15000+ users to develop healthy eating habits
                             </li>
                         </ul>
                     </div>
