--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
                         </div>
                         <ul>
                             <li>
-                                Created and maintained 25 Amazon brands’ e-commerce data pipelines and dashboards using data build tool, Snowflake,
-                                Airflow, Python, AWS, and Tableau
+                                Created and maintained 25 Amazon brands’ e-commerce data pipelines and dashboards using Python, data build tool, Snowflake,
+                                Airflow, AWS, Docker, Kubernetes, and Tableau
                             </li>
                         </ul>
                     </div>
