--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta property="og:title" content="Göktuğ Aşcı, MD, MSc" />
-    <meta property="og:description" content="I am a medical doctor and a data engineer who builds full-stack cross-platform mobile
-            applications. My passion is to bridge the gap between software
-            engineering and medicine; to generate data-driven, inexpensive and
-            simple, yet broadly applicable solutions to improve health care
-            quality around the world." />
+    <meta property="og:description" content="I am a data engineer and a medical doctor who develops full-stack, cross-platform software. My passion is to bridge
+    the gap between software engineering and medicine to generate data-driven and inexpensive solutions to automate and
+    improve healthcare services by utilizing big data and machine learning technologies." />
+
     <meta property="og:type" content="website" />
     <meta property="og:image" content="assets/img/profile.png" />
     <meta property="og:url" content="https://www.drgoktugasci.com/" />
@@ -283,7 +282,8 @@
                         </div>
                         <ul>
                             <li>
-                                Created and maintained 25 Amazon brands’ e-commerce data pipelines and dashboards using Python, data build tool, Snowflake,
+                                Created and maintained 25 Amazon brands’ e-commerce data pipelines and dashboards using
+                                Python, data build tool, Snowflake,
                                 Airflow, AWS, Docker, Kubernetes, and Tableau
                             </li>
                         </ul>
@@ -368,7 +368,7 @@
                         <span class="text-primary">August 2019 - July 2020</span>
                     </div>
                 </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <!-- <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">
                             Co-Founder, Product Manager, Front-End Developer
@@ -393,7 +393,7 @@
                         <span class="text-primary font-weight-bold">Istanbul, Turkey</span><br />
                         <span class="text-primary">November 2019 - October 2020</span>
                     </div>
-                </div>
+                </div> -->
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">Research Intern</h4>
@@ -879,7 +879,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.sololearn.com/Certificate/1060-1874014/jpg/" target="_blank" class="text-danger">
+                        <a href="https://www.sololearn.com/Certificate/1060-1874014/jpg/" target="_blank"
+                            class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> SoloLearn &#183;
                             SQL&nbsp;
                             <i class="fas fa-link"></i>
