--- a/siir.html
+++ b/siir.html
@@ -9,11 +9,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta property="og:title" content="Göktuğ Aşcı, MD, MSc" />
-    <meta property="og:description" content="I am a medical doctor and a data engineer who builds full-stack cross-platform mobile
-                applications. My passion is to bridge the gap between software
-                engineering and medicine; to generate data-driven, inexpensive and
-                simple, yet broadly applicable solutions to improve health care
-                quality around the world." />
+    <meta property="og:description" content="I am a data engineer and a medical doctor who develops full-stack, cross-platform software. My passion is to bridge
+    the gap between software engineering and medicine to generate data-driven and inexpensive solutions to automate and
+    improve healthcare services by utilizing big data and machine learning technologies." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="assets/img/profile.png" />
     <meta property="og:url" content="https://www.drgoktugasci.com/" />
@@ -501,7 +499,8 @@
             <div class="card shadow">
                 <div class="card-body">
                     <p class="card-text">
-                        İnsan, doğası gereği hep yalnızdır; bazen yalnızlığını başkalarıyla paylaşarak yalnızlığından kurtulduğunu sanır fakat bu aldanış kısa sürer.
+                        İnsan, doğası gereği hep yalnızdır; bazen yalnızlığını başkalarıyla paylaşarak yalnızlığından
+                        kurtulduğunu sanır fakat bu aldanış kısa sürer.
                     </p>
                 </div>
             </div>
@@ -549,7 +548,8 @@
             <div class="card shadow">
                 <div class="card-body">
                     <p class="card-text">
-                        Eksiksiz'lerin gözüne girmek için uğraşır insanoğlu. Fakat hedefine yaklaştıkça 'eksiksiz' kavramının eksikli olduğunu fark eder.
+                        Eksiksiz'lerin gözüne girmek için uğraşır insanoğlu. Fakat hedefine yaklaştıkça 'eksiksiz'
+                        kavramının eksikli olduğunu fark eder.
                     </p>
                 </div>
             </div>
@@ -557,7 +557,8 @@
             <div class="card shadow">
                 <div class="card-body">
                     <p class="card-text">
-                        Bilim, basamakları eksiksiz olduğundan basittir fakat sanat, var oluşu gereği ara basamakları kaybettirir; bu da onu hep karmaşık kılar.
+                        Bilim, basamakları eksiksiz olduğundan basittir fakat sanat, var oluşu gereği ara basamakları
+                        kaybettirir; bu da onu hep karmaşık kılar.
                     </p>
                 </div>
             </div>
@@ -581,7 +582,8 @@
             <div class="card shadow">
                 <div class="card-body">
                     <p class="card-text">
-                        Kendi kendine konuşmak delilikse yazarlar zır delidir. Çünkü yazarlık iç konuşmalarını sayfalarca anlatmaktır.
+                        Kendi kendine konuşmak delilikse yazarlar zır delidir. Çünkü yazarlık iç konuşmalarını
+                        sayfalarca anlatmaktır.
                     </p>
                 </div>
             </div>
@@ -589,7 +591,8 @@
             <div class="card shadow">
                 <div class="card-body">
                     <p class="card-text">
-                        Özel ve güzel sadece öznelerde var olur. Bu yüzden her insan belirli öznelere bağlanmak, bu özneler sayesinde özel ve güzel hissetmek ister.
+                        Özel ve güzel sadece öznelerde var olur. Bu yüzden her insan belirli öznelere bağlanmak, bu
+                        özneler sayesinde özel ve güzel hissetmek ister.
                     </p>
                 </div>
             </div>
@@ -597,7 +600,8 @@
             <div class="card shadow">
                 <div class="card-body">
                     <p class="card-text">
-                        Karşılanamamış ihtiyaçlar büyük takıntılara; büyük takıntılar, büyük başarılara ya da büyük problemlere dönüşür.
+                        Karşılanamamış ihtiyaçlar büyük takıntılara; büyük takıntılar, büyük başarılara ya da büyük
+                        problemlere dönüşür.
                     </p>
                 </div>
             </div>
@@ -605,7 +609,8 @@
             <div class="card shadow">
                 <div class="card-body">
                     <p class="card-text">
-                        İnsanlar fikir taşıyıcılarıdır. 'Fikirlerin insanları' ölür, kendileri kalır ve bu fikirler yeni doğanların zihinlerinde evrilir.
+                        İnsanlar fikir taşıyıcılarıdır. 'Fikirlerin insanları' ölür, kendileri kalır ve bu fikirler yeni
+                        doğanların zihinlerinde evrilir.
                     </p>
                 </div>
             </div>
@@ -613,7 +618,9 @@
             <div class="card shadow">
                 <div class="card-body">
                     <p class="card-text">
-                        Bir kişinin 'karakterinin oturmuş' olması, kişinin öğrenme hızının yavaşladığını ve sonuç olarak kişinin hayatının stabilleştiğini gösterir. Çünkü yüksek hızda öğrenme, kişi hangi yaşta olursa olsun, kişiye evreni daha geniş paradigmalar üzerinden okuma şansı verir.
+                        Bir kişinin 'karakterinin oturmuş' olması, kişinin öğrenme hızının yavaşladığını ve sonuç olarak
+                        kişinin hayatının stabilleştiğini gösterir. Çünkü yüksek hızda öğrenme, kişi hangi yaşta olursa
+                        olsun, kişiye evreni daha geniş paradigmalar üzerinden okuma şansı verir.
                     </p>
                 </div>
             </div>
@@ -621,7 +628,8 @@
             <div class="card shadow">
                 <div class="card-body">
                     <p class="card-text">
-                        Bir objenin veya süjenin değerini diğer örneklerine göre yeri belirler. Başka bir deyişle değerliliği tanımlayabilmek değersizliği anlamayı gerektirir.
+                        Bir objenin veya süjenin değerini diğer örneklerine göre yeri belirler. Başka bir deyişle
+                        değerliliği tanımlayabilmek değersizliği anlamayı gerektirir.
                     </p>
                 </div>
             </div>
