--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta property="og:title" content="Göktuğ Aşcı, MD, MSc" />
-    <meta property="og:description" content="I am a data engineer and a medical doctor who develops full-stack, cross-platform software. My passion is to bridge
-    the gap between software engineering and medicine to generate data-driven and inexpensive solutions to automate and
-    improve healthcare services by utilizing big data and machine learning technologies." />
+    <meta property="og:description" content="Data engineer and medical doctor who develops full-stack, cross-platform software" />
 
     <meta property="og:type" content="website" />
     <meta property="og:image" content="assets/img/profile.png" />
